--- a/App/PeaZip/res/lang/ru.txt
+++ b/App/PeaZip/res/lang/ru.txt
@@ -7,7 +7,7 @@ Last rev.: 20121227
 
 === PeaZip text group ===
 
-txt_6_1_ec: Expand / collapse archive tree
+txt_6_1_ec: Показать / скрыть структуру архива
 txt_6_0_msq: Сортировать файлы по типам для создания непрерывного архива
 txt_5_9_lff: Анализировать файлы и каталоги
 txt_5_9_pff: Анализировать, показать заголовки файлов и EOF
