--- a/App/PeaZip/res/lang/pt-br.txt
+++ b/App/PeaZip/res/lang/pt-br.txt
@@ -7,7 +7,7 @@ Last rev.: 20160227
 
 === PeaZip text group ===
 
-txt_6_1_ec: Expand / collapse archive tree
+txt_6_1_ec: Expandir / agrupar árvore do arquivo
 txt_6_0_msq: Ordenar por tipo de arquivo para compressão sólida
 txt_5_9_lff: Analisar arquivos e pastas
 txt_5_9_pff: Analisar, exibir cabeçalhos de arquivos/EOF
