--- a/App/PeaZip/res/lang/chs.txt
+++ b/App/PeaZip/res/lang/chs.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 Chinese - 简体中文
-6.1
+6.2
 翻译: Aerowolf, Junde Yhi
 Last rev. by: Junde Yhi
 Last rev.: 20160730
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: 展开 / 折叠压缩文件树
 txt_6_0_msq: 对固实压缩文件按文件类型排序
 txt_5_9_lff: 分析文件和文件夹
