--- a/App/PeaZip/res/lang/en-gb.txt
+++ b/App/PeaZip/res/lang/en-gb.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 English (United Kingdom)
-6.1
+6.2
 Translated by: Robert Readman
 Last rev. by: 
 Last rev.: 20110531
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: Expand / collapse archive tree
 txt_6_0_msq: Sort by file type for solid compression
 txt_5_9_lff: Analyze files and folders
