--- a/App/PeaZip/res/lang/ja.txt
+++ b/App/PeaZip/res/lang/ja.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 Japanese - 日本語
-6.1
+6.2
 Translated by: Dan Tanaka
 Last rev. by: shaw
 Last rev.: 20151130
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: Expand / collapse archive tree
 txt_6_0_msq: Sort by file type for solid compression
 txt_5_9_lff: ファイルとフォルダの分析
