--- a/App/PeaZip/res/lang/nl.txt
+++ b/App/PeaZip/res/lang/nl.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 Dutch - Nederlands
-6.1
+6.2
 Translated by: Koos van Riemsdijk - Stephan Paternotte
 Last rev. by: Stephan Paternotte
 Last rev.: 20160620
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: Expand / collapse archive tree
 txt_6_0_msq: Sorteren op bestandsnaam voor robuste compressie
 txt_5_9_lff: Bestanden en mappen analyseren
