--- a/App/PeaZip/res/lang/no.txt
+++ b/App/PeaZip/res/lang/no.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 Norwegian - Norsk
-6.1
+6.2
 Oversatt av: Rune C. Akselsen, Arne Hanssen
 Sist rev. av: Arne Hanssen
 Sist revidert: 20160728
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: Utvid / slå sammen arkiv-tre
 txt_6_0_msq: Sorter etter filtype for kompakt pakking
 txt_5_9_lff: Analyser filer og mapper
