--- a/App/PeaZip/res/lang/uk.txt
+++ b/App/PeaZip/res/lang/uk.txt
@@ -1,12 +1,15 @@
 ﻿=== PeaZip language file ===
 Ukrainian - Українська
-6.1
+6.2
 Перекладено Міщенко О.С., sasha[at]mishchenko.tk, Пилипчук О.П., pilipchukap[at]rambler[dot]ru
 Last rev. by: IxI_JOKER_IxI (Localize.org.ua)
 Last rev.: 20151030
 
 === PeaZip text group ===
 
+txt_6_2_encext: Add ".enc" suffix to encrypted archives
+txt_6_2_archive: Archive file type
+txt_6_2_container: Container file type
 txt_6_1_ec: Expand / collapse archive tree
 txt_6_0_msq: Sort by file type for solid compression
 txt_5_9_lff: Analyze files and folders
